# heft

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: benchmark.yml  ci.yml
benches/: README.md  scan_performance.rs
docs/: architecture.md  fix-roadmap.md  research.md  stress-test.md  v0.2-release-notes.md  vision.md
src/: big.rs  cli.rs  config.rs  default.rs  lib.rs  main.rs  picker.rs  platform.rs  snapshot.rs  spinner.rs  staleness.rs  summary.rs  util.rs
src/activity/: git.rs  mod.rs  mtime.rs  process.rs
src/audit/: categories.rs  dev_artifacts.rs  export.rs  mod.rs
src/clean/: mod.rs
src/report/: json.rs  mod.rs  table.rs
src/scan/: caches.rs  detector.rs  docker.rs  mod.rs  projects.rs  xcode.rs
src/store/: diff.rs  migrate.rs  mod.rs  snapshot.rs
src/tui/: mod.rs  state.rs  views.rs
tests/: integration_test.rs
