[package]
name = "heft"
version = "0.4.0"
edition = "2021"
rust-version = "1.75"
description = "A disk space auditor for developers that identifies reclaimable build artifacts, caches, and container data"
license = "MIT"
repository = "https://github.com/0xSaiNova/heft"
keywords = ["disk", "cleanup", "docker", "cache", "developer-tools"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# cli argument parsing with derive macros for declarative subcommand definitions
# standard library has no argument parsing, clap is the de facto choice
clap = { version = "4", features = ["derive"] }

# serialization framework needed for json output and future sqlite storage
# BloatEntry and related types need to serialize for both use cases
serde = { version = "1", features = ["derive"] }

# json serialization for --json output flag
# serde alone doesn't include a format, serde_json is the standard json backend
serde_json = "1"

# filesystem traversal with iterator interface
# std::fs::read_dir is too low level, walkdir handles recursion and symlink policy
walkdir = "2"

# memory usage monitoring for observability and staying lightweight
# provides cross-platform RSS tracking without heavy dependencies
memory-stats = "1.0"

# sqlite for snapshot storage and historical tracking
# lightweight embedded database for persisting scan results
rusqlite = { version = "0.32", features = ["bundled"] }

# cross-platform directory paths (data dir for database storage)
# provides standard locations like ~/.local/share on Linux, ~/Library/Application Support on macOS
directories = "5"

# datetime formatting for snapshot timestamps
# convert unix timestamps to human-readable dates
chrono = "0.4"

# toml parsing for config file (~/.config/heft/config.toml)
toml = "0.8"

[dev-dependencies]
# criterion for detailed benchmarking with statistical analysis
# provides regression detection and comparison across runs
criterion = { version = "0.5", features = ["html_reports"] }

# tempfile for creating isolated benchmark fixtures
# needed to generate realistic directory structures for testing
tempfile = "3"

[[bin]]
name = "heft"
path = "src/main.rs"

[[bench]]
name = "scan_performance"
harness = false
